<?xml version="1.0"?>
<package>
  <description>
   UD_cursor
  </description>

  <name>ud_cursor</name>
  <version>1.1.0</version>
  <maintainer email="qiaosong@udel.edu">Qiaosong Wang</maintainer>
  <license>BSD</license>
  <author email="qiaosong@udel.edu">Qiaosong Wang</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
